# doubao2docx

./: .gitignore  AGENTS.md  DoubaoExport.spec  Makefile  README.md  config.yaml  pyproject.toml  requirements-pack.txt  requirements.txt
.github/workflows/: build.yml
data/export/260413/: 260413-1 轻型教练机环控系统优化.docx
data/export/260414/: 260414-1 固定翼飞机可拆卸机翼钢管优化设计.docx  260414-2 3mm²软铜线绝缘表面风冷载流量分析.docx  260414-3 轻型教练机环控系统优化.docx
gui/: __init__.py  __main__.py  app.py  config_manager.py  reporter.py
gui/pages/: __init__.py  main_page.py
src/: AGENTS.md  __init__.py  __main__.py  cli.py  config.py  exceptions.py  utils.py
src/generator/: AGENTS.md  __init__.py  batch_report.py  doc_namer.py  docx_builder.py  latex_converter.py
src/preprocessor/: AGENTS.md  __init__.py  base.py  doubao_parser.py
src/scraper/: AGENTS.md  __init__.py  anti_detect.py  browser.py  crawler.py  extractor.py  models.py  page_actions.py  pool.py  steps.py
tests/: conftest.py  test_anti_detect.py  test_base_extended.py  test_batch_report.py  test_browser.py  test_config.py  test_crawler.py  test_doc_namer.py  test_docx_builder.py  test_doubao_parser.py  test_exceptions.py  test_extractor.py  test_latex_converter.py  test_models.py  test_page_actions.py  test_playwright_api.py  test_pool.py  test_preprocessor.py  test_steps.py  test_utils.py
tests/html/: code.html  image.html  math.html  table.html
