[project]
name = "doubao-export"
version = "0.1.0"
description = "导出豆包聊天记录为Word文档"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"