[project]
name = "doubao-export"
version = "0.1.0"
description = "导出豆包聊天记录为Word文档"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "requests>=2.31.0",
    "pypandoc>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
gui = [
    "flet>=0.85.0",
    "flet-desktop>=0.85.0",
]
packaging = ["pyinstaller"]

[project.scripts]
doubao-export = "src.cli:main"
doubao-export-gui = "gui.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
